--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Stephen Chen",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.10"
   },
   "devDependencies": {
